// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lad-tech/mobydick-core/ImageView should renders correctly 1`] = `
<View
  style={
    [
      {
        "marginBottom": 6,
      },
      undefined,
    ]
  }
>
  <View />
</View>
`;

exports[`@lad-tech/mobydick-core/ImageView should renders correctly with styles 1`] = `
<View
  style={
    [
      {
        "marginBottom": 6,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View />
</View>
`;
